--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "mongoose": "^5.7.1",
     "node-telegram-bot-api": "^0.30.0"
   }
 }
